--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,15 +451,30 @@ body {
 
 .capabilities-transition {
   text-align: center;
-  margin: 90px 0 60px 0;
+  margin: 110px 0 70px 0;
+  position: relative;
 }
 
 .capabilities-transition p {
-  font-size: 1rem;
-  color: #444;
-  max-width: 700px;
-  margin: 0 auto;
-  line-height: 1.7;
+  display: inline-block;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #001540;
+  padding: 0 25px;
+  background: #ffffff;
+  position: relative;
+  z-index: 2;
+}
+
+.capabilities-transition::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: rgba(0, 21, 64, 0.15);
+  z-index: 1;
 }
 
 /* ================================= */
