--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,8 +496,12 @@ body {
 .capability-primary {
   flex: 1;
   padding: 60px 60px 60px 40px;
-  border-right: 3px solid #9C7C4C;
-  background: #f8f9fc;
+  border-right: 2px solid rgba(156, 124, 76, 0.6);
+  background: linear-gradient(
+  to bottom right,
+  rgba(0, 21, 64, 0.04),
+  rgba(0, 21, 64, 0.01)
+);
   border-radius: 18px 0 0 18px;
 }
 
@@ -530,7 +534,8 @@ body {
 }
 
 .cap-list li {
-  color: #1f5fbf;   /* refined hyperlink-style blue */
+  color: #1c4ea3;   /* refined hyperlink-style blue */
+  letter-spacing: 0.3px;
   font-weight: 600;
   margin-bottom: 12px;
 }
@@ -548,7 +553,7 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 35px;
+  gap: 28px;
 }
 
 .cap-secondary-item {
