--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,7 +602,7 @@ body {
 .cap-punchline {
   font-weight: 700;
     font-size: 1rem;
-  color: #0b3d91;   /* strong but refined blue */
+  color: #1c4ea3;   /* refined hyperlink-style blue */
   margin-bottom: 14px;
   line-height: 1.6;
 }
