--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -546,7 +546,7 @@ body {
 .cap-number {
   font-size: 1rem;
   color: #9C7C4C;
-  margin-right: 10px;
+  margin-right: 8px;
   font-weight: 600;
 }
 
@@ -560,7 +560,7 @@ body {
 }
 
 .cap-secondary-item {
-  padding-bottom: 25px;
+  padding-bottom: px;
   border-bottom: 1px solid rgba(0, 21, 64, 0.12);
   transition: all 0.3s ease;
   margin-bottom: 50px;
@@ -568,6 +568,11 @@ body {
 
 .cap-secondary-item:last-child {
   border-bottom: none;
+}
+
+.cap-secondary-item:not(:last-child) {
+  border-bottom: 1px solid #e6e6e6;
+  margin-bottom: 50px;
 }
 
 .cap-secondary-item h4 {
@@ -611,7 +616,7 @@ body {
   font-size: 0.95rem;
   line-height: 1.9;
   color: #555;
-  margin-bottom: 18px;
+  margin-bottom: 20px;
 }
 
 .cap-link {
@@ -623,6 +628,18 @@ body {
 
 .cap-link:hover {
   text-decoration: underline;
+}
+
+.infra-link {
+  font-weight: 600;
+  font-size: 0.95rem;
+  color: #123a7a;
+  transition: all 0.3s ease;
+}
+
+.infra-link:hover {
+  letter-spacing: 0.5px;
+  transform: translateX(3px);
 }
 
 
