--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -612,6 +612,11 @@ body {
   line-height: 1.6;
 }
 
+.cap-secondary-item .infra-link {
+  display: inline-block;
+  margin-top: 18px;   /* increase breathing space */
+}
+
 .cap-body {
   font-size: 0.95rem;
   line-height: 1.9;
