--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -633,7 +633,10 @@ body {
 }
 
 .cap-link {
-  display: inline-block;
+  display: inline-flex;          /* ensures better alignment */
+  justify-content: center;
+  align-items: center;
+  width: 280px;                  /* fixed uniform width */
   margin-top: 22px;
   padding: 8px 16px;
   border: 1.5px solid #9C7C4C;
@@ -643,8 +646,6 @@ body {
   text-decoration: none;
   border-radius: 4px;
   transition: all 0.3s ease;
-    min-width: 270px;
-  text-align: center;
 }
 
 .cap-link:hover {
