--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -566,7 +566,7 @@ body {
 .cap-secondary-item {
   display: flex;
   flex-direction: column;
-  padding-bottom: px;
+  padding-bottom: 40px;
   border-bottom: 1px solid rgba(0, 21, 64, 0.12);
   transition: all 0.3s ease;
   margin-bottom: 50px;
@@ -639,12 +639,12 @@ body {
   justify-content: center;
   align-items: center;
   width: 280px;
-  margin-top: auto;            /* key change */
+  margin-top: 22px;            /* key change */
   align-self: flex-start;      /* keeps left alignment */
-  padding: 8px 16px;
+  padding: 7px 14px;
   border: 1.5px solid #9C7C4C;
   color: #9C7C4C;
-  font-size: 0.9rem;
+  font-size: 0.88rem;
   font-weight: 600;
   text-decoration: none;
   border-radius: 4px;
