--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -648,6 +648,7 @@ body {
   border-radius: 4px;
   transition: all 0.3s ease;
   white-space: nowrap;   /* prevents line break */
+  width: fit-content;
 }
 
 
