--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -645,8 +645,8 @@ body {
 
 .cap-link {
   display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   padding: 10px 18px;
   border: 1.5px solid #9C7C4C;
   color: #9C7C4C;
