--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,15 @@ body {
 }
 
 /* Headings & Brand Font */
-h1, h2, h3, .navbar-brand {
+h1, h2, h3, {
   font-family: 'Montserrat', sans-serif;
+}
+
+.navbar-brand {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: #0b1f3b;
 }
 
 
