--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,8 @@ body {
   animation: fadeInUp 1.2s ease-in-out;
   line-height: 1;
   leading:tight; 
+    max-width: 900px;
+  margin: 0 auto;
  }
 
 /* Subtext */
@@ -233,7 +235,7 @@ body {
     font-size: 2rem;
   }
   .hero p {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
 
