--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1501,15 +1501,15 @@ a[href*="/services/"]::before,
 
 .section-header h2 {
   font-size: 34px;
-  font-weight: 700;
-  color: #122c5c;
+  font-weight: 800;
+  color: #001F54;
   margin-bottom: 20px;
 }
 
 .section-header p {
   font-size: 16px;
   line-height: 1.8;
-  color: #5f6b7a;
+  color: #5c6b82;
 }
 
 /* Grid */
