--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1657,9 +1657,11 @@ a[href*="/services/"]::before,
 }
 
 .framework-line {
-  font-weight: 600;
+    font-size: 18px;
+  font-weight: 700;
   color: #001F54;
-  margin-bottom: 18px;
+  letter-spacing: -0.2px;
+  margin-bottom: 20px;
 }
 
 
